@@ -53,11 +53,20 @@ Transports:
       - [ ] TChannel
       - [x] gRPC
 
+Peer Lists:
+- [x] Port abstract peer list to v2/yarpcpeerlist
+- [ ] Port yarpcroundrobin
+- [x] Port yarpcrandpeer
+- [ ] Port yarpcchoiceoftwo
+- [ ] Port yarpcfewestpending
+- [ ] Port yarpchashring32
+
 To port peer lists forward:
 - [ ] Replace functional options with options struct pattern, like net in the
       go standard library and the v2/yarpchttp example.
 - [ ] Remove lifecycle.
 - [ ] Drop Config and Spec, recreate in yarpcfx.
+- [ ] clean up yarpctest namespace (including removing StartAction/StopAction)
 
 To port transports forward:
 - [ ] Rename Transport to Dialer, implementing yarpc.Dialer.
@@ -92,6 +101,7 @@ To port encodings forward:
 - [ ] Nit: eliminate use of "." imports for yarpctests.
 
 Package changes:
+- [x] yarpcconfig -> /dev/null
 - [ ] api/transport -> v2
 - [ ] api/peer -> v2
 - [ ] api/middleware -> v2
